# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

## Build snapshot {{{
config("snapshot_config") {
  visibility = [ ":*" ]
}

ohos_executable("snapshot_display") {
  install_enable = true
  sources = [
    "snapshot_display.cpp",
    "snapshot_utils.cpp",
  ]

  configs = [ ":snapshot_config" ]

  deps = [
    "//foundation/multimedia/image_standard/interfaces/innerkits:image_native",  # PixelMap
    "//foundation/windowmanager/dm:libdm",
    "//foundation/windowmanager/utils:libwmutil",
    "//foundation/windowmanager/wm:libwm",
    "//third_party/libpng:libpng",  # png
  ]

  part_name = "window_manager"
  subsystem_name = "window"
}

## Build snapshot }}}

group("test") {
  testonly = true
}
