# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("libwmutil_private_config") {
  include_dirs = [
    "include",
    "//foundation/windowmanager/dmserver/include",
    "../interfaces/innerkits/dm",
    "../interfaces/innerkits/wm",
  ]
}

config("libwmutil_public_config") {
  include_dirs = [ "//foundation/windowmanager/utils/include" ]
}

## Build libwmutil.so
ohos_shared_library("libwmutil") {
  sources = [
    "src/display_info.cpp",
    "src/singleton_container.cpp",
    "src/virtual_display_info.cpp",
    "src/window_property.cpp",
    "src/wm_trace.cpp",
  ]

  configs = [ ":libwmutil_private_config" ]

  public_configs = [ ":libwmutil_public_config" ]

  deps = [ "//utils/native/base:utils" ]

  external_deps = [
    "bytrace_standard:bytrace_core",
    "hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  part_name = "window_manager"
  subsystem_name = "window"
}
