# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/graphic/standard/graphic_config.gni")
config("libwmutil_private_config") {
  include_dirs = [
    "include",
    "//foundation/windowmanager/dmserver/include",
    "../interfaces/innerkits/dm",
    "../interfaces/innerkits/wm",
  ]
  defines = []

  # Get gpu defines
  defines += gpu_defines
}

config("libwmutil_public_config") {
  include_dirs = [ "//foundation/windowmanager/utils/include" ]
}

## Build libwmutil.so
ohos_shared_library("libwmutil") {
  sources = [
    "src/agent_death_recipient.cpp",
    "src/display_info.cpp",
    "src/screen_group_info.cpp",
    "src/screen_info.cpp",
    "src/singleton_container.cpp",
    "src/surface_draw.cpp",
    "src/surface_reader.cpp",
    "src/surface_reader_handler_impl.cpp",
    "src/window_property.cpp",
    "src/window_transition_info.cpp",
    "src/wm_trace.cpp",
  ]

  configs = [ ":libwmutil_private_config" ]

  public_configs = [ ":libwmutil_public_config" ]

  deps = [
    "//foundation/arkui/ace_engine/build/external_config/flutter/skia:ace_skia_ohos",
    "//foundation/graphic/standard/rosen/modules/render_service_base:librender_service_base",
    "//foundation/graphic/standard/rosen/modules/render_service_client:librender_service_client",
  ]

  external_deps = [
    "ability_runtime:ability_manager",
    "bytrace_standard:bytrace_core",
    "graphic_standard:surface",
    "hilog_native:libhilog",
    "ipc:ipc_core",
    "multimedia_image_standard:image_native",
    "utils_base:utils",
  ]

  part_name = "window_manager"
  subsystem_name = "window"
}
