# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("window_scene_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "session/container/include",
    "session/host/include",
  ]
}

config("window_scene_public_config") {
  include_dirs = [
    "interfaces/innerkits",
    "utils/include",
  ]
}

ohos_shared_library("window_scene") {
  sources = [
    "session/host/src/zidl/scene_session_proxy.cpp",
    "session/host/src/zidl/scene_session_stub.cpp",
    "session/host/src/session.cpp",
    "session/host/src/scene_session.cpp",
    "session/host/src/scene_session manager.cpp",
    "session/container/src/zidl/scene_session_stage_proxy.cpp",
    "session/container/src/zidl/scene_session_stage_stub.cpp",
    "session/container/src/zidl/window_event_channel_proxy.cpp",
    "session/container/src/zidl/window_event_channel_stub.cpp",
  ]

  cflags_cc = [ "-std=c++17" ]
  configs = [
    ":window_scene_private_config",
  ]

  public_configs = [ ":window_scene_public_config" ]

  deps = [
    "//foundation/graphic/graphic_2d/rosen/modules/render_service_client:librender_service_client",
  ]

  external_deps = [
    "ipc:ipc_core",
    "hilog_native:libhilog",
    "input:libmmi-client",
    "c_utils:utils",
  ]

  relative_install_dir = "module"
  part_name = "window_manager"
  subsystem_name = "window"
}
