# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../windowmanager_aafwk.gni")

group("window_scene") {
  public_deps = [
    "intention_event:libintention_event",
    "session:scene_session",
    "session:screen_session",
    "session_manager:scene_session_manager",
    "session_manager:screen_session_manager",
    "session_manager:session_manager",
  ]
  if (scene_board_enabled) {
    public_deps += [ "session_manager_service:session_manager_service" ]
  }
}

group("test") {
  testonly = true
  deps = [ "test/unittest:unittest" ]
}
